# groundwater

./: .gitignore  README.md  setup.cfg
groundwater/devito_op/: __init__.py  groundwater_devito_op.py
groundwater/utils/: __init__.py  gaussian_random_field.py  plotting_tools.py
scripts/: gradient_test.py  groundwater_inversion.py  groundwater_simulation_example.py
tests/: gradient_test.py  test_groundwater_gradient.py  test_groundwater_torch_gradient.py
