[metadata]
name = groundwater
version = 0.1
author = Ali Siahkoohi
author_email = alisk@rice.edu
description = Groundwater simulation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alisiahkoohi/groundwater
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    devito[extras,tests]
    matplotlib
    numpy
packages = find:
python_requires = >=3.10
